--- a/Chapter 14. Data Analysis Examples.ipynb
+++ b/Chapter 14. Data Analysis Examples.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3514,6 +3514,350 @@
    "metadata": {},
    "source": [
     "#  USDA Food Database"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# jsonのdownload\n",
+    "import json\n",
+    "\n",
+    "db=json.load(open('./dataset/pydata-book/datasets/usda_food/database.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6636"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(db)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['id', 'description', 'tags', 'manufacturer', 'group', 'portions', 'nutrients'])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# キーの取得\n",
+    "db[0].keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 特定のkeyのみ取得してDataframeにする\n",
+    "info_keys={'description','group','id','manufacture'}\n",
+    "\n",
+    "info=pd.DataFrame(db,columns=info_keys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>group</th>\n",
+       "      <th>manufacture</th>\n",
+       "      <th>id</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Dairy and Egg Products</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1008</td>\n",
+       "      <td>Cheese, caraway</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Dairy and Egg Products</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1009</td>\n",
+       "      <td>Cheese, cheddar</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Dairy and Egg Products</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1018</td>\n",
+       "      <td>Cheese, edam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Dairy and Egg Products</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1019</td>\n",
+       "      <td>Cheese, feta</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Dairy and Egg Products</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1028</td>\n",
+       "      <td>Cheese, mozzarella, part skim milk</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    group  manufacture    id  \\\n",
+       "0  Dairy and Egg Products          NaN  1008   \n",
+       "1  Dairy and Egg Products          NaN  1009   \n",
+       "2  Dairy and Egg Products          NaN  1018   \n",
+       "3  Dairy and Egg Products          NaN  1019   \n",
+       "4  Dairy and Egg Products          NaN  1028   \n",
+       "\n",
+       "                          description  \n",
+       "0                     Cheese, caraway  \n",
+       "1                     Cheese, cheddar  \n",
+       "2                        Cheese, edam  \n",
+       "3                        Cheese, feta  \n",
+       "4  Cheese, mozzarella, part skim milk  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "全体像を捉える"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6636 entries, 0 to 6635\n",
+      "Data columns (total 4 columns):\n",
+      "group          6636 non-null object\n",
+      "manufacture    0 non-null float64\n",
+      "id             6636 non-null int64\n",
+      "description    6636 non-null object\n",
+      "dtypes: float64(1), int64(1), object(2)\n",
+      "memory usage: 207.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "info.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Vegetables and Vegetable Products    812\n",
+       "Beef Products                        618\n",
+       "Baked Products                       496\n",
+       "Breakfast Cereals                    403\n",
+       "Fast Foods                           365\n",
+       "Legumes and Legume Products          365\n",
+       "Lamb, Veal, and Game Products        345\n",
+       "Sweets                               341\n",
+       "Fruits and Fruit Juices              328\n",
+       "Pork Products                        328\n",
+       "Beverages                            278\n",
+       "Soups, Sauces, and Gravies           275\n",
+       "Finfish and Shellfish Products       255\n",
+       "Baby Foods                           209\n",
+       "Cereal Grains and Pasta              183\n",
+       "Ethnic Foods                         165\n",
+       "Snacks                               162\n",
+       "Nut and Seed Products                128\n",
+       "Poultry Products                     116\n",
+       "Sausages and Luncheon Meats          111\n",
+       "Dairy and Egg Products               107\n",
+       "Fats and Oils                         97\n",
+       "Meals, Entrees, and Sidedishes        57\n",
+       "Restaurant Foods                      51\n",
+       "Spices and Herbs                      41\n",
+       "Name: group, dtype: int64"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 頻度の確認\n",
+    "pd.value_counts(info['group'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>description</th>\n",
+       "      <th>group</th>\n",
+       "      <th>units</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Protein</td>\n",
+       "      <td>Composition</td>\n",
+       "      <td>g</td>\n",
+       "      <td>25.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Total lipid (fat)</td>\n",
+       "      <td>Composition</td>\n",
+       "      <td>g</td>\n",
+       "      <td>29.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Carbohydrate, by difference</td>\n",
+       "      <td>Composition</td>\n",
+       "      <td>g</td>\n",
+       "      <td>3.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Ash</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>g</td>\n",
+       "      <td>3.28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Energy</td>\n",
+       "      <td>Energy</td>\n",
+       "      <td>kcal</td>\n",
+       "      <td>376.00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   description        group units   value\n",
+       "0                      Protein  Composition     g   25.18\n",
+       "1            Total lipid (fat)  Composition     g   29.20\n",
+       "2  Carbohydrate, by difference  Composition     g    3.06\n",
+       "3                          Ash        Other     g    3.28\n",
+       "4                       Energy       Energy  kcal  376.00"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 最初の配列にはいっている栄養の情報をとってくる\n",
+    "nutrients=pd.DataFrame(db[0]['nutrients'])\n",
+    "\n",
+    "nutrients.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## infoの情報とnutrientsの情報を結合する"
    ]
   },
   {
