--- a/CH3.ipynb
+++ b/CH3.ipynb
@@ -9,11 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from  snippets.reader  import *"
+    "from  snippets.reader  import *\n",
+    "from snippets.transform import *\n",
+    "from snippets.vectorization import *\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -22,12 +25,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "jap=JapaneseCorpusReader(root='./dataset/corpas',encoding='shift_jis')"
+    " jap=JapaneseCorpusReader(root='./dataset/corpas',encoding='shift_jis')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +39,7 @@
        "['kokoro.txt']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -47,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -58,7 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +92,7 @@
        " '。\\t記号,句点,*,*,*,*,。,。,。']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,8 +112,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from snippets.transform import *"
@@ -111,9 +123,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'JapaneseTextNormalizer' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-4b1446691726>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjap_trans\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mJapaneseTextNormalizer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtraned\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjap_trans\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcorpus\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'JapaneseTextNormalizer' is not defined"
+     ]
+    }
+   ],
    "source": [
     "jap_trans=JapaneseTextNormalizer()\n",
     "traned=jap_trans.transform(corpus=jap)"
@@ -121,104 +145,198 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['私', 'わたくし', 'その', '人', '常に', '先生', '呼ぶ', 'いる']"
+       "array([3., 5., 7.])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "traned[0]"
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "a=[1,2,3]\n",
+    "b=[2,3,4]\n",
+    "d=np.zeros(3)\n",
+    "a=np.array(a)\n",
+    "b=np.array(b)\n",
+    "c=[d,a,b,d]\n",
+    "from functools import  reduce\n",
+    "\n",
+    "reduce(add,c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# word2vec\n",
+    "word2vec=GensimVectorizer('./dataset/latest-ja-word2vec-gensim-model/word2vec.gensim.model')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from snippets.vectorization import freq_vectorize,one_hot_vectorize\n",
-    "vec=map(freq_vectorize,traned)"
+    "sentvec=word2vec.transform(traned)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jap = JapaneseCorpusReader(root='./dataset/corpas', encoding='shift_jis')\n",
+    "jap_trans = JapaneseTextNormalizer()\n",
+    "traned = jap_trans.transform(corpus=jap)\n",
+    "model=GensimVectorizer('./dataset/latest-ja-word2vec-gensim-model/word2vec.gensim.model')\n",
+    "vecs=model.transform(traned)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# vec2=vecs.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "reduce() of empty sequence with no initial value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m-------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m             Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-1b4d9058ff9e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvecs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvec\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvecs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-3-1b4d9058ff9e>\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mvecs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mvec\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mvec\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mvecs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Develop/project/DIUnit/pycoon/snippets/transform.py\u001b[0m in \u001b[0;36mtransform\u001b[0;34m(self, sents)\u001b[0m\n\u001b[1;32m     86\u001b[0m             \u001b[0mwordvecs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_word2vec\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mword\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msent\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m             \u001b[0mwordvecs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mvec\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mwordvecs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0msentvec\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mreduce\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0madd\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwordvecs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m             \u001b[0;32myield\u001b[0m \u001b[0msentvec\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: reduce() of empty sequence with no initial value"
+     ]
+    }
+   ],
+   "source": [
+    "vecs=[vec for vec in vecs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "defaultdict(int,\n",
-       "            {'私': 1,\n",
-       "             'わたくし': 1,\n",
-       "             'その': 1,\n",
-       "             '人': 1,\n",
-       "             '常に': 1,\n",
-       "             '先生': 1,\n",
-       "             '呼ぶ': 1,\n",
-       "             'いる': 1})"
+       "<generator object GensimVectorizer.transform at 0x124696f68>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(vec)[0]"
+    "vecs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 157,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 157,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(np.array([]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=None\n",
+    "a=[]\n",
+    "\n",
+    "if a ==None or  len(a)==0:\n",
+    "    print('None')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "oh_vec=map(one_hot_vectorize,traned)"
+    "f=list((a,b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'私': True,\n",
-       " 'わたくし': True,\n",
-       " 'その': True,\n",
-       " '人': True,\n",
-       " '常に': True,\n",
-       " '先生': True,\n",
-       " '呼ぶ': True,\n",
-       " 'いる': True}"
+       "2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(oh_vec)[0]"
+    "len(f)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
